[package]
name = "vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4"

block-modes = "0.8.1"
block-padding = "0.2.1"
rand = "0.8.5"
rand_core = "0.6.4"
rust-crypto = "^0.2"
secp256k1 = "0.29.0"
tokio = { version = "1.37.0", features = ["full"] }
x25519-dalek = "1.2.0"